# pdf-llm-chat

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Dockerfile  ERRORS.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  todo.yaml
app/: main.py
app/account/application/: schemas.py  services.py
app/account/controller/: dependencies.py  routers.py
app/account/domain/: exceptions.py  models.py
app/account/infrastructure/repositories/: sqlalchemy_user_repository.py  user_repository.py
app/account/tests/features/: environment.py  user_login.feature  user_registration.feature
app/account/tests/features/steps/: action_steps.py  result_steps.py  setup_steps.py
app/account/tests/integration/: conftest.py  test_account_integration.py  test_account_service_integration.py
app/account/tests/unit/: test_account_domain.py
app/chat/application/: schemas.py  services.py  tasks.py
app/chat/controllers/: dependencies.py  routers.py
app/chat/domain/: exceptions.py  models.py
app/chat/infrastructure/repositories/: chat_repository.py  sqlalchmey_chat_repository.py
app/chat/tests/features/: environment.py  pdf_chat.feature
app/chat/tests/features/steps/: pdf_chat_steps.py
app/chat/tests/integration/: test_chat_service_integration.py  test_sqlalchemy_chat_repository_integration.py
app/chat/tests/unit/: test_chat_domain.py
app/core/: config.py  database.py  database_mongo.py  dependencies.py  procrastinate_app.py
app/lib/: security.py
app/pdf/application/: schemas.py  services.py
app/pdf/controller/: dependencies.py  routers.py
app/pdf/domain/: exceptions.py  models.py
app/pdf/infrastucture/repositories/: mongo_pdf_repository.py  pdf_repository.py
app/pdf/tests/features/: environment.py  pdf_list.feature  pdf_parse.feature  pdf_select.feature  pdf_upload.feature
app/pdf/tests/features/steps/: pdf_list_steps.py  pdf_parse_steps.py  pdf_select_steps.py  pdf_upload_steps.py
app/pdf/tests/integration/: conftest.py  test_pdf_service_integration.py
app/pdf/tests/unit/: test_mongo_pdf_repository.py  test_pdf_domain.py
app/tests/: test_main.py
app/tests/unit/: test_security.py
features/: hello_world.feature
features/steps/: hello_world_steps.py
