[project]
name = "pdf_chat"
version = "0.1.0"
description = "A PDF chat application"
authors = [{name = "Yusuf", email = "yusufyuksel.uk@hotmail.com"}]
dependencies = [
    "pre-commit>=4.2.0",
    "ruff>=0.11.9",
] # Add dependencies here later

[tool.ruff]
line-length = 88
target-version = "py39"
select = [
    "E",  # Error
    "F",  # Pyflakes
    "W",  # Warning
    "I",  # Isort
    "C",  # Complexity
    "N",  # Naming
    "D",  # Docstrings
    "B",  # Bugbear
]
ignore = [
    "D100", # Missing module docstring
    "D104", # Missing package docstring
]


[tool.uv]

[dependency-groups]
dev = [
    "behave>=1.2.6",
    "pytest>=8.3.5",
]
# uv specific configurations can go here
