[project]
name = "pdf_chat"
version = "0.1.0"
description = "A PDF chat application"
authors = [{name = "Yusuf", email = "yusufyuksel.uk@hotmail.com"}]
requires-python = ">=3.13"
dependencies = [
    "pre-commit>=4.2.0",
    "ruff>=0.11.9",
    "passlib>=1.7.4",
    "bcrypt>=4.1.3",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "email-validator>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "pytest-cov>=6.1.1",
    "motor>=3.7.0",
    "mongomock>=4.3.0",
   # "mongomock-motor>=0.0.35",

] # Add dependencies here later

[tool.ruff]
line-length =108
target-version = "py312"
lint.select = [
    "E",  # Error
#    "F",  # Pyflakes
    "W",  # Warning
#    "I",  # Isort
#    "C",  # Complexity
#    "N",  # Naming
#    "D",  # Docstrings
#    "B",  # Bugbear
]
lint.ignore = [
#    "D100", # Missing module docstring
#    "D104", # Missing package docstring
]


[tool.uv]

[dependency-groups]
dev = [
    "behave>=1.2.6",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "pytest>=8.3.5",
    "pydantic-settings>=2.0.0", # Added pydantic-settings to dev group
    "pre-commit>=4.2.0",
    "ruff>=0.11.9",
    "passlib>=1.7.4",
    "bcrypt>=4.1.3",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "email-validator>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "motor>=3.7.0",
    "mongomock>=4.3.0",
  #  "mongomock-motor>=0.0.35",
]
# uv specific configurations can go here

[tool.setuptools.packages]
find = { include = ["app*"] }

[tool.pytest.ini_options]
testpaths = [
    "app/account/tests/unit", 
    "app/account/tests/integration", 
    "app/tests/unit", 
    "app/pdf/tests/integration",
    "app/pdf/tests/unit",
    "app/chat/tests/unit",
    "app/chat/tests/integration"
] # Include the new unit test directory
pythonpath = "."
markers = [
    "anyio: marks tests as requiring anyio"
]
anyio_backend = "asyncio"

[project.scripts]
start = "uvicorn app.main:app --reload"

[tool.behave]
paths = [
    "features/steps/",
    "app/account/tests/features/steps/",
    "app/chat/tests/features/steps/",
    "app/pdf/tests/features/steps/",
]
